--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -115,7 +115,8 @@
                 </div>  
         </div>
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-        <h2 class="text-center"><i class="fa fa-lightbulb-o"></i> Planner Preview </h2>
+        <p class="text-center"><strong><i class="fa fa-lightbulb-o"></i> Planner Preview </strong></p>
+        <p class="text-center">This is a preview of the live planner for your course.</p>
     </div>
 
     </div>
