--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -39,6 +39,8 @@
                     <!-- colors -->
                     <div class="col-md-12 col-lg-12">
                     <p></p>
+                    <h2> Planner Theme </h2>
+        <p>Customize the look of your planner. Choose one color and generate theme colors, or customize your style by selecting colors below. </p>
          <div class="panel panel-default">
 
                         <div class="panel-heading"><strong><i class="fa fa-paint-brush"></i> Theme Styles</strong></div>
