--- a/src/app/custom-date/custom-date.component.scss
+++ b/src/app/custom-date/custom-date.component.scss
@@ -1,37 +1,6 @@
-.circ
+.area
 {
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  background: linear-gradient(#655 40%, yellowgreen 0);
-  color: transparent;
-  text-align: center;
-}
-
-@keyframes spin {
-  to { transform: rotate(.5turn); }
-}
-@keyframes bg {
-  50% { background: #655; }
-}
-
-.circ::before
-{
-  content: '';
-  position: absolute;
-  top: 0; left: 50%;
-  width: 50%; height: 100%;
-  border-radius: 0 100% 100% 0 / 50%;
-  background-color: inherit;
-  transform-origin: left;
-  animation: spin 50s linear infinite,
-             bg 100s step-end infinite;
-  animation-play-state: paused;
-  animation-delay: inherit;
-}
-
-.circ h2
-{
-  text-align: center;
-  padding: 33% 30% 30% 20%;
+  width: 100%;
+  background: red;
+  padding: 5px;
 }
