Added new calendar and menu setting

--- a/src/app/custom-date/custom-date.component.scss
+++ b/src/app/custom-date/custom-date.component.scss
@@ -1,6 +1,13 @@
 .area
 {
-  width: 100%;
-  background: red;
-  padding: 5px;
+  width: 50%;
+}
+
+.floats{
+  float: left;
+}
+
+.float-right
+{
+  float: right;
 }
