--- a/src/app/custom-date/custom-date.component.html
+++ b/src/app/custom-date/custom-date.component.html
@@ -1,9 +1,9 @@
 <!--<div class="dateArea" *ngFor="let t of assignments[value].due_date" [ngStyle]="{'background-image': 'url('+ 'assets/images/' + t.image + ')', 'background-size': 'contain', 'background-repeat': 'no-repeat'}">-->
     <!--  <img *ngIf="value>0 && value < amount-2" [src]="imageSrc(this.assignments[value].due_date)" class="img-responsive imageSize visible-sm visible-xs"/> -->
 <div class="dateArea" *ngFor="let t of assignments[value].due_date">
-	<div class="area">
-		<h2>{{t.month}}</h2>
-		<h1> {{t.day}} </h1>
-		<h1> {{t.percentage}} </h1>
-	</div>
+		<div class="area text-center" [ngStyle]="{'background': ui?.buttons?.color, 'color': '#ffffff', 'margin-top': '-15px'}"><h3>{{t.month}}</h3></div>
+		<div class="area text-center" [ngStyle]="{'background': ui?.buttons?.color, 'color': '#ffffff', 'height': '65px', 'margin-top': '-35px'}"> <h1 [ngStyle]="{'font-size': '3.9em', 'padding-top': '3px'}">{{t.day}}</h1> </div>
+		<div class="area floats">
+			<h1 class="text-center"> {{t.percentage}} </h1>
+		</div>
 </div>
