Changed bkgd image, EOD

--- a/src/app/custom-date/custom-date.component.html
+++ b/src/app/custom-date/custom-date.component.html
@@ -5,7 +5,7 @@
 		<div class="text-center" [ngStyle]="{'background': ui?.buttons?.color, 'color': '#ffffff', 'margin-top': '-15px'}"><h3>{{t.month}}</h3></div>
 		<div class="text-center" [ngStyle]="{'background': ui?.buttons?.color, 'color': '#ffffff', 'height': '65px', 'margin-top': '-35px'}"> <h1 [ngStyle]="{'font-size': '3.9em', 'padding-top': '3px'}">{{t.day}}</h1> </div>
 </div>
-		<div class="area floats-right" [ngStyle]="{'margin-top': '0px','background': ui?.buttons?.hover, 'color': '#ffffff', 'height': 'auto'}">
+		<div class="percentageArea floats-right" [ngStyle]="{'margin-top': '0px','background': ui?.buttons?.hover, 'color': '#ffffff', 'height': 'auto'}">
 			<h1 class="text-center" [ngStyle]="{'font-size': '2.5em', 'padding-top': '3px'}"> {{t.percentage}}% </h1>
 		</div>
 </div>
