--- a/src/app/custom-date/custom-date.component.scss
+++ b/src/app/custom-date/custom-date.component.scss
@@ -1,4 +1,4 @@
-.area
+.area,.percentageArea
 {
   width: 50%;
 }
@@ -11,3 +11,15 @@
 {
   float: right;
 }
+
+/*
+.percentageArea::after
+{
+  content: "";
+  display: inline-block;
+  margin-top: -30px;
+  width: 30px;
+  height: 50px;
+  background: red;
+}
+*/
